<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Driver.MainDriverActivity"
    tools:showIn="@layout/app_bar__driver_main">


    <FrameLayout
        android:id="@+id/hometab_context"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/hometab_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/rb_home1"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_0_back"
                android:text="@string/tab_home1"/>

            <RadioButton
                android:id="@+id/rb_home2"
                style="@style/RadioButtonBottomTab"
                android:drawableTop="@drawable/tab_1_back"
                android:text="@string/tab_home2_driver"/>

            <RadioButton
                android:id="@+id/rb_home3"
                style="@style/RadioButtonBottomTab"
                android:checked="true"
                android:drawableTop="@drawable/tab_2_back"
                android:text="@string/tab_home3_my"/>

        </RadioGroup>
    </LinearLayout>

</LinearLayout>
